--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html lang="ja">
     <head>
         <link rel="icon" href="https://siz05.github.io/assets/favicon.ico">
+        <link rel="stylesheet" href="https://siz05.github.io/assets/index.css">
         <script src="https://siz05.github.io/assets/jquery-3.7.1.min.js"></script>
         <title>しずのお部屋!</title>
     </head>
