--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
             </div>
         </footer>
         <div id=x-raybutton>
-            <img src="assets/Search.svg>
-            </svg>
+            <svg src="assets/Search.svg"></svg>
         </div>
     </body>
 </html>
