--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <header>
             <div id="topofscreen">
-
+                <h1>sizのお部屋</h1>
             </div>
         </header>
         <div id="naiyou">
