--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     </head>
     <body>
         <header>
-            <div id="topofscreen">
-                <h1>sizのお部屋</h1>
+            <div>
+                <h1 id="headertext">sizのお部屋</h1>
+                <p id="headertext">自己紹介</p>
             </div>
         </header>
         <div id="naiyou">
