--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <header>
-            <div>
+            <div id="header">
                 <h1 id="headertext">sizのお部屋</h1>
                 <p id="headertext">自己紹介</p>
             </div>
