--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     </head>
     <body>
         <header>
-            <div id="header">
-                <h1 id="headertext">sizのお部屋</h1>
-                <p id="headertext">自己紹介</p>
+            <div id="flex">
+                <h1 id="flex">sizのお部屋</h1>
+                <p id="flex">自己紹介</p>
             </div>
         </header>
         <div id="naiyou">
