--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <body>
         <header>
             <div id="flex">
-                <h1 id="flex headertext">sizのお部屋</h1>
-                <p id="flex headertext">自己紹介</p>
+                <h1 id="flex sitename">sizのお部屋</h1>
+                <p id="flex majorheading">自己紹介</p>
             </div>
         </header>
         <div id="naiyou">
