--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <header>
-            <div id="flex">
+            <div id="flex inheader">
                 <h1 id="flex sitename">sizのお部屋</h1>
                 <p id="flex majorheading">自己紹介</p>
             </div>
