--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <p id="flex">自己紹介</p>
             </div>
         </header>
-        <div id="naiyou">
+        <main>
             <p>naiyou</p>
             <p>naiyou</p>
             <p>naiyou</p>
@@ -42,7 +42,7 @@
             <p>naiyou</p>
             <p>naiyou</p>
             <p>naiyou</p>
-        </div>
+        </main>
         <footer>
             <div id="downofscreen">
                 
