--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     </head>
     <body>
         <header>
-            <div id="flex inheader">
-                <h1 id="flex">sizのお部屋</h1>
-                <p id="flex">自己紹介</p>
+            <div id="inheader">
+                <h1>sizのお部屋</h1>
+                <p>自己紹介</p>
             </div>
         </header>
         <main>
