--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <header>
             <div id="inheader">
-                <h1>sizのお部屋</h1>
+                <h1>しずのお部屋</h1>
                 <p>自己紹介</p>
             </div>
         </header>
