--- a/zibunyou/scripthack.html
+++ b/zibunyou/scripthack.html
@@ -17,5 +17,6 @@
       <input type="text" id="site">
       <input type="button" id="gosite" href="javascript: kakikae;">
     </div>
+    <iframe src="https://miraiseed7.benesse.ne.jp/seed/vw020101/displayLogin/djznxdpH"></iframe>
   </body>
 </html>
