--- a/zibunyou/scripthack.html
+++ b/zibunyou/scripthack.html
@@ -5,6 +5,10 @@
       #yoko{
         display: flex;
       }
+      iframe{
+        width: 100%;
+        height: 100%;
+      }
     </style>
     <script>
       function kakikae{
